@@ -23,8 +23,8 @@ DIR =$(shell pwd)/debian/runit
 
 unpack: deb-checkdir unpack-stamp
 unpack-stamp:
-	tar xzf runit-1.0.4.tar.gz
-	ln -s runit-1.0.4 admin/runit
+	tar xzf runit-1.0.5.tar.gz
+	ln -s runit-1.0.5 admin/runit
 	(cd admin/runit && patch -p0) <debian/diff/svlogd.diff
 	echo '$(CC) $(CFLAGS)' >admin/runit/src/conf-cc
 	echo '$(CC) $(LDFLAGS)' >admin/runit/src/conf-ld
